--- a/codementor-web/codementor/codementor_ai/templates/index.html
+++ b/codementor-web/codementor/codementor_ai/templates/index.html
@@ -299,27 +299,27 @@
     </div>
 
     <!-- Code Review Form -->
-<form action="{% url 'codementor_ai:code_mentor' %}" method="post">
+<form action="{% url 'codementor_ai:code_mentor' %}" method="post" onsubmit="submitForm(event)">
     {% csrf_token %}
     <textarea name="code_input" rows="6" placeholder="Enter code for review"></textarea>
     <input type="submit" value="Submit">
-</form onsubmit="submitForm(event)">
+</form>
 <div id="code_review_result">{{ code_review }}</div>
 
 <!-- Code Debug Form -->
-<form action="{% url 'codementor_ai:code_mentor' %}" method="post">
+<form action="{% url 'codementor_ai:code_mentor' %}" method="post" onsubmit="submitForm(event)">
     {% csrf_token %}
     <textarea name="debug_input" rows="6" placeholder="Enter code for debugging"></textarea>
     <input type="submit" value="Submit" >
-</form onsubmit="submitForm(event)">
+</form>
 <div id="code_debug_result">{{ code_debug }}</div>
 
 <!-- Test Case Generation Form -->
-<form action="{% url 'codementor_ai:code_mentor' %}" method="post">
+<form action="{% url 'codementor_ai:code_mentor' %}" method="post" onsubmit="submitForm(event)">
     {% csrf_token %}
     <textarea name="test_case_input" rows="6" placeholder="Enter code for test case generation"></textarea>
     <input type="submit" value="Submit" >
-</form onsubmit="submitForm(event)">
+</form>
 <div id="test_case_generation_result">
     {% if test_case %}
         {% for case in test_case %}
